--- a/accelerate-llvm/accelerate-llvm.cabal
+++ b/accelerate-llvm/accelerate-llvm.cabal
@@ -74,6 +74,7 @@ Library
     Data.Array.Accelerate.LLVM.CodeGen.Arithmetic
     Data.Array.Accelerate.LLVM.CodeGen.Array
     Data.Array.Accelerate.LLVM.CodeGen.Base
+    Data.Array.Accelerate.LLVM.CodeGen.Cluster
     Data.Array.Accelerate.LLVM.CodeGen.Constant
     Data.Array.Accelerate.LLVM.CodeGen.Environment
     Data.Array.Accelerate.LLVM.CodeGen.Exp
