--- a/accelerate-llvm-ptx/accelerate-llvm-ptx.cabal
+++ b/accelerate-llvm-ptx/accelerate-llvm-ptx.cabal
@@ -74,7 +74,7 @@ Flag nvvm
 Library
   exposed-modules:
     Data.Array.Accelerate.LLVM.PTX
-    -- Data.Array.Accelerate.LLVM.PTX.Foreign
+    Data.Array.Accelerate.LLVM.PTX.Foreign
 
   other-modules:
     Data.Array.Accelerate.LLVM.PTX.Operation
@@ -86,8 +86,9 @@ Library
     -- Data.Array.Accelerate.LLVM.PTX.Array.Table
     Data.Array.Accelerate.LLVM.PTX.Context
     Data.Array.Accelerate.LLVM.PTX.Debug
+    Data.Array.Accelerate.LLVM.PTX.Kernel
     Data.Array.Accelerate.LLVM.PTX.Pool
-    -- Data.Array.Accelerate.LLVM.PTX.State
+    Data.Array.Accelerate.LLVM.PTX.State
     Data.Array.Accelerate.LLVM.PTX.Target
 
     -- Data.Array.Accelerate.LLVM.PTX.Execute
@@ -98,7 +99,7 @@ Library
     -- Data.Array.Accelerate.LLVM.PTX.Execute.Stream
     -- Data.Array.Accelerate.LLVM.PTX.Execute.Stream.Reservoir
 
-    -- Data.Array.Accelerate.LLVM.PTX.CodeGen
+    Data.Array.Accelerate.LLVM.PTX.CodeGen
     Data.Array.Accelerate.LLVM.PTX.CodeGen.Base
     -- Data.Array.Accelerate.LLVM.PTX.CodeGen.Fold
     -- Data.Array.Accelerate.LLVM.PTX.CodeGen.FoldSeg
@@ -117,7 +118,7 @@ Library
     Data.Array.Accelerate.LLVM.PTX.Compile.Libdevice.Load
     Data.Array.Accelerate.LLVM.PTX.Compile.Libdevice.TH
 
-    -- Data.Array.Accelerate.LLVM.PTX.Link
+    Data.Array.Accelerate.LLVM.PTX.Link
     Data.Array.Accelerate.LLVM.PTX.Link.Cache
     Data.Array.Accelerate.LLVM.PTX.Link.Object
 
