--- a/accelerate-llvm-ptx/accelerate-llvm-ptx.cabal
+++ b/accelerate-llvm-ptx/accelerate-llvm-ptx.cabal
@@ -146,6 +146,7 @@ Library
         , hashable                      >= 1.2
         , llvm-pretty                   >= 0.12
         , microlens                     >= 0.4
+        , microlens-mtl                 >= 0.2
         , mtl                           >= 2.2.1
         , nvvm                          >= 0.9
           -- only used to render llvm-pretty output
